refactor: update duration handling and improve logging in time calculator