@@ -11,7 +11,7 @@ import java.util.ArrayList;
 public class Principal {
     public static void main(String[] args) {
         Filme meuFilme = new Filme("O poderoso chefão", 1970);
-        meuFilme.setDuracaoEmMinutos(180);
+        meuFilme.setDuracaoEmMinutos("180");
         System.out.println("Duração do filme: " + meuFilme.getDuracaoEmMinutos());
 
         meuFilme.exibeFichaTecnica();
@@ -32,7 +32,7 @@ public class Principal {
         System.out.println("Duração para maratonar Lost: " + lost.getDuracaoEmMinutos());
 
         Filme outroFilme = new Filme("Avatar", 2023);
-        outroFilme.setDuracaoEmMinutos(200);
+        outroFilme.setDuracaoEmMinutos(String.valueOf(200));
 
         CalculadoraDeTempo calculadora = new CalculadoraDeTempo();
         calculadora.inclui(meuFilme);
@@ -50,7 +50,7 @@ public class Principal {
         filtro.filtra(episodio);
 
         var filmeDoPaulo = new Filme("Dogville", 2003);
-        filmeDoPaulo.setDuracaoEmMinutos(200);
+        filmeDoPaulo.setDuracaoEmMinutos(String.valueOf(200));
         filmeDoPaulo.avalia(10);
 
         ArrayList<Filme> listaDeFilmes = new ArrayList<>();
@@ -58,9 +58,9 @@ public class Principal {
         listaDeFilmes.add(meuFilme);
         listaDeFilmes.add(outroFilme);
         System.out.println("Tamanho da lista " + listaDeFilmes.size());
-        System.out.println("Primeiro filme " + listaDeFilmes.get(0).getNome());
+        System.out.println("Primeiro filme " + listaDeFilmes.getFirst().getNome());
         System.out.println(listaDeFilmes);
-        System.out.println("toString do filme " + listaDeFilmes.get(0).toString());
+        System.out.println("toString do filme " + listaDeFilmes.getFirst().toString());
 
 
     }
